--- a/hexlet_django_blog/article/templates/article/index.html
+++ b/hexlet_django_blog/article/templates/article/index.html
@@ -1,1 +1,11 @@
-<h1>Название: {{app_name}}</h1>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Статья {{ article_id }}</title>
+</head>
+<body>
+    <h1>Статья номер {{ article_id }}</h1>
+    <p>Тег: {{ tags }}</p>
+</body>
+</html>
